DOCS: 이상한 문자 만들기 풀이 추가

--- a/docs/2021.10.09/이상한 문자 만들기.md
+++ b/docs/2021.10.09/이상한 문자 만들기.md
@@ -78,6 +78,39 @@ Q. 문자열 s는 한 개 이상의 단어로 구성되어 있습니다. 각 단
 </html>
 ```
 
+**<다른 풀이 2번>**
+```javascript
+<html>
+  <head>
+      <meta charset="UTF-8">
+      <title>출력결과</title>
+  </head>
+  <body>
+      <script>
+         function solution(s) { 
+          let answer = '';
+           s = s.split(' ');
+           for(let i = 0; i < s.length; i++) {
+             for(let j = 0; j < s[i].length; j++) {
+               if(j % 2 === 0) { // 짝수일경우
+                  answer += s[i][j].toUpperCase()
+               }else { // 홀수일경우
+                  answer += s[i][j].toLowerCase()
+               }
+             }
+             if( i < s.length -1) { // 띄어쓰기 해주기 위해서 존재
+                 answer += ' ';
+             }
+           }
+           return answer;
+        }
+        let str = 'try hello world';
+        console.log(solution(str))
+      </script>
+   </body>
+</html>
+```
+
 
 ---
 ##  **🔥 새로 배운 내용 & 느낀 점**
